preloaded images in index html

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,40 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      rel="preload"
+      href="%PUBLIC_URL%/images/itsmebutransparent.png"
+      as="image"
+    />
+    <link
+      rel="preload"
+      href="%PUBLIC_URL%/images/airbnbdesktop-front.png"
+      as="image"
+    />
+    <link
+      rel="preload"
+      href="%PUBLIC_URL%/images/bootstraplogo.png"
+      as="image"
+    />
+    <link
+      rel="preload"
+      href="%PUBLIC_URL%/images/calculator-right.png"
+      as="image"
+    />
+    <link rel="preload" href="%PUBLIC_URL%/images/cilogo.png" as="image" />
+    <link rel="preload" href="%PUBLIC_URL%/images/epetcare.png" as="image" />
+    <link rel="preload" href="%PUBLIC_URL%/images/htmlandcss.png" as="image" />
+    <link rel="preload" href="%PUBLIC_URL%/images/jslogo.png" as="image" />
+    <link rel="preload" href="%PUBLIC_URL%/images/mui.png" as="image" />
+    <link rel="preload" href="%PUBLIC_URL%/images/mysql.png" as="image" />
+    <link rel="preload" href="%PUBLIC_URL%/images/php.png" as="image" />
+    <link rel="preload" href="%PUBLIC_URL%/images/portfolio.png" as="image" />
+    <link rel="preload" href="%PUBLIC_URL%/images/react.png" as="image" />
+    <link rel="preload" href="%PUBLIC_URL%/images/sasslogo.png" as="image" />
+    <link rel="preload" href="%PUBLIC_URL%/images/seth.jpg" as="image" />
+    <link rel="preload" href="%PUBLIC_URL%/images/sethedited.png" as="image" />
+    <link rel="preload" href="%PUBLIC_URL%/images/tailwind.png" as="image" />
+    <link rel="preload" href="%PUBLIC_URL%/images/weather.png" as="image" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
